fixed labels in theme.css and added css to better format allowed tags codd in comments (removed white-space: nowrap)

--- a/theme.css
+++ b/theme.css
@@ -1,9 +1,13 @@
 /*
-Theme Name: Pistol
-Theme URI: http://salferrarello.com/pistol/
+Theme Name: Bootstart
+Theme URI: http://salferrarello.com/bootstart/
 Author: Sal Ferrarello
 Author URI: http://salferrarello.com/
-Description: Starter (Pistol) Theme
-Version: 0.1.0
+Description: Bootstrap 3.0 Starter Theme
+Version: 0.1.1
 */
+
+.form-allowed-tags code {
+    white-space: normal;
+}
 
